--- a/GamePrograming/Match3/Match3.vcxproj
+++ b/GamePrograming/Match3/Match3.vcxproj
@@ -134,9 +134,12 @@
     <ClCompile Include="AppMain.cpp" />
     <ClCompile Include="AppMain_cpp.cpp" />
     <ClCompile Include="FreamControl_cpp.cpp" />
+    <ClCompile Include="GameClearScene_.cpp" />
+    <ClCompile Include="GameMainScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FreamControl_h.h" />
+    <ClInclude Include="GameClearScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
