--- a/GamePrograming/Match3/Match3.vcxproj
+++ b/GamePrograming/Match3/Match3.vcxproj
@@ -132,14 +132,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AppMain.cpp" />
-    <ClCompile Include="AppMain_cpp.cpp" />
-    <ClCompile Include="FreamControl_cpp.cpp" />
-    <ClCompile Include="GameClearScene_.cpp" />
+    <ClCompile Include="FreamControl.cpp" />
+    <ClCompile Include="GameClearScene.cpp" />
     <ClCompile Include="GameMainScene.cpp" />
+    <ClCompile Include="GameOverScene.cpp" />
+    <ClCompile Include="lnputControl.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="FreamControl_h.h" />
+    <ClInclude Include="FreamControl.h" />
     <ClInclude Include="GameClearScene.h" />
+    <ClInclude Include="GameMainScene.h" />
+    <ClInclude Include="GameOverScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
