--- a/GamePrograming/Match3/Match3.vcxproj
+++ b/GamePrograming/Match3/Match3.vcxproj
@@ -137,12 +137,14 @@
     <ClCompile Include="GameMainScene.cpp" />
     <ClCompile Include="GameOverScene.cpp" />
     <ClCompile Include="lnputControl.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FreamControl.h" />
     <ClInclude Include="GameClearScene.h" />
     <ClInclude Include="GameMainScene.h" />
     <ClInclude Include="GameOverScene.h" />
+    <ClInclude Include="lnputControl.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
