--- a/GamePrograming/Match3/Match3.vcxproj
+++ b/GamePrograming/Match3/Match3.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="GameOverScene.cpp" />
     <ClCompile Include="lnputControl.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Stage.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FreamControl.h" />
@@ -145,6 +146,9 @@
     <ClInclude Include="GameMainScene.h" />
     <ClInclude Include="GameOverScene.h" />
     <ClInclude Include="lnputControl.h" />
+    <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="Stage.h" />
+    <ClInclude Include="TitleScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
