--- a/GamePrograming/Match3/Match3.vcxproj
+++ b/GamePrograming/Match3/Match3.vcxproj
@@ -139,13 +139,14 @@
     <ClCompile Include="lnputControl.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FreamControl.h" />
     <ClInclude Include="GameClearScene.h" />
     <ClInclude Include="GameMainScene.h" />
     <ClInclude Include="GameOverScene.h" />
-    <ClInclude Include="lnputControl.h" />
+    <ClInclude Include="InputControl.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Stage.h" />
     <ClInclude Include="TitleScene.h" />
