--- a/GamePrograming/Tetoris/Tetoris.vcxproj
+++ b/GamePrograming/Tetoris/Tetoris.vcxproj
@@ -134,6 +134,8 @@
     <ClCompile Include="AppMain.cpp" />
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="EndScene.cpp" />
+    <ClCompile Include="FreamControl.cpp" />
+    <ClCompile Include="GameMainScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
