--- a/GamePrograming/Tetoris/Tetoris.vcxproj
+++ b/GamePrograming/Tetoris/Tetoris.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="EndScene.cpp" />
     <ClCompile Include="FreamControl.cpp" />
     <ClCompile Include="GameMainScene.cpp" />
+    <ClCompile Include="lnputControl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
