--- a/GamePrograming/Tetoris/Tetoris.vcxproj.filters
+++ b/GamePrograming/Tetoris/Tetoris.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="GameMainScene.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="lnputControl.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h">
