--- a/GamePrograming/Tetoris/Tetoris.vcxproj
+++ b/GamePrograming/Tetoris/Tetoris.vcxproj
@@ -138,6 +138,8 @@
     <ClCompile Include="GameMainScene.cpp" />
     <ClCompile Include="lnputControl.cpp" />
     <ClCompile Include="RankingScene.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
